[tool.poetry]
name = "pyspc-unmix"
version = "0.2.0"
description = "Python package for unmixing hyperspectral data"
authors = ["Rustam Giuliev <glvrst@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.2"
scikit-learn = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
autoflake = "^1.4"
pre-commit = "^2.20.0"
ipython = "^8.4.0"
matplotlib = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
